--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,5 +18,7 @@ steps:
    - 'us-central1'
    - '--platform'
    - 'managed'
+options:
+ logging: CLOUD_LOGGING_ONLY
 images:
 - 'gcr.io/flower-detection-323915/app:$COMMIT_SHA'
